OLMIS-2853: restored reverted changes
